Changed app name to escape_from_fb, fixed up profile page a bit.

--- a/escape_from_fb/templates/base.html
+++ b/escape_from_fb/templates/base.html
@@ -65,6 +65,10 @@
           let us know</a>. You can also check out the
         <a target="_blank" href="https://github.com/jessamynsmith/escape-from-fb">source code</a> yourself!
       </div>
+
+      <div class="grey">Version {{ VERSION }}, Deployed
+        {{ DEPLOY_DATE|date:"M d, Y, H:i:s e" }}
+      </div>
     </div>
   </div>
 {% endblock %}
