Changed name to Analysocial

--- a/analysocial/templates/base.html
+++ b/analysocial/templates/base.html
@@ -51,7 +51,7 @@
 
     <div class="navbar-header">
         <a class="brand" href="">
-            <span>escape from fb</span><br>
+            <span>Analysocial</span><br>
         </a>
     </div>
 </nav>
@@ -64,9 +64,9 @@
     <div class="footer">
         <div class="center">
             <div>Found a bug? Have a feature request? Please
-                <a target="_blank" href="https://github.com/jessamynsmith/escape-from-fb/issues">
+                <a target="_blank" href="https://github.com/jessamynsmith/analysocial/issues">
                     let us know</a>. You can also check out the
-                <a target="_blank" href="https://github.com/jessamynsmith/escape-from-fb">source
+                <a target="_blank" href="https://github.com/jessamynsmith/analysocial">source
                     code</a> yourself!
             </div>
 
