--- a/analysocial/templates/base.html
+++ b/analysocial/templates/base.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="{% static 'img/favicon.ico' %}">
 
     <link rel="stylesheet" href="//code.jquery.com/ui/1.11.1/themes/smoothness/jquery-ui.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
@@ -51,6 +52,7 @@
 
     <div class="navbar-header">
         <a class="brand" href="">
+            <img src="{% static 'img/analysocial.png' %}" alt="Analysocial logo">
             <span>Analysocial</span><br>
         </a>
     </div>
