Added some content to the privacy policy.

--- a/graph/templates/account/privacy.html
+++ b/graph/templates/account/privacy.html
@@ -6,5 +6,9 @@
 
 {% block content %}
     <h3>{% trans "Privacy Policy" %}</h3>
-    <p>Policy here</p>
+    <p>Analysocial is an app for analyzing your posts on social media, e.g. Facebook. As such,
+        Analysocial requires you to login via Facebook and grant permissions to the app to view
+        your posts. This data will be retrieved from the API for your own viewing and analysis only.
+        Your data will not be visible to other users of Analysocial nor will it be given or sold
+        to any firms, organizations, or individuals outside Analysocial.</p>
 {% endblock %}
