--- a/analysocial/templates/base.html
+++ b/analysocial/templates/base.html
@@ -42,6 +42,9 @@
                 Login
             </a></li>
         {% else %}
+            <li><a href="{% url 'usage' %}">
+                Usage
+            </a></li>
             <li><a href="{% url 'account_profile' %}">
                 Profile
             </a></li>
