--- a/analysocial/templates/base.html
+++ b/analysocial/templates/base.html
@@ -7,25 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="{% static 'img/favicon.ico' %}">
 
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.1/themes/smoothness/jquery-ui.min.css">
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-    <link rel="stylesheet"
-          href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
-
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-
-    <script type='text/javascript'>
-        addFormStyles = function() {
-            $('select,input[type="text"],input[type="datetime"],input[type="date"],input[type="time"],input[type="number"]').addClass('form-control').addClass('my-form-control');
-            $('label').addClass('control-label').addClass('my-control-label');
-        };
-
-        $(document).ready(function() {
-            addFormStyles();
-        });
-    </script>
+    <link rel="stylesheet" href="{% static 'bootstrap/dist/css/bootstrap.min.css' %}">
 
     <link rel="stylesheet" href="{% static 'css/base.css' %}" type="text/css" media="screen">
 
@@ -68,6 +50,23 @@
 <div class="spacing_top">
     {% block content %}{% endblock %}
 </div>
+
+
+<script src="{% static 'jquery/dist/jquery.min.js' %}"></script>
+<script src="{% static 'bootstrap/dist/js/bootstrap.min.js' %}"></script>
+
+<script type='text/javascript'>
+    addFormStyles = function() {
+        $('select,input[type="text"],input[type="datetime"],input[type="date"],input[type="time"],input[type="number"]').addClass('form-control').addClass('my-form-control');
+        $('label').addClass('control-label').addClass('my-control-label');
+    };
+
+    $(document).ready(function() {
+        addFormStyles();
+    });
+</script>
+
+{% block extra_js %}{% endblock %}
 
 {% block footer %}
     <div class="footer">
