--- a/analysocial/templates/base.html
+++ b/analysocial/templates/base.html
@@ -40,7 +40,7 @@
     </ul>
 
     <div class="navbar-header">
-        <a class="brand" href="">
+        <a class="brand" href="/">
             <img src="{% static 'img/analysocial.png' %}" alt="Analysocial logo">
             <span>Analysocial</span><br>
         </a>
