Added info on getting your account deleted.

--- a/graph/templates/account/privacy.html
+++ b/graph/templates/account/privacy.html
@@ -15,4 +15,11 @@
             or sold to any firms, organizations, or individuals outside Analysocial.
         {% endblocktrans %}
     </p>
+    <p>
+        {% blocktrans %}
+            When you delete your account, all associated data, including your Facebook posts,
+            will be deleted. To delete your account, contact the admin at
+            <a href="mailto:{{ admin_email }}">{{ admin_email }}</a>.
+        {% endblocktrans %}
+    </p>
 {% endblock %}
