Now successfully retrieving posts from Facebook and displaying them on the screen.

--- a/analysocial/templates/base.html
+++ b/analysocial/templates/base.html
@@ -24,8 +24,8 @@
                 Login
             </a></li>
         {% else %}
-            <li><a href="{% url 'usage' %}">
-                Usage
+            <li><a href="{% url 'posts_facebook' %}">
+                Posts
             </a></li>
             <li><a href="{% url 'account_profile' %}">
                 Profile
