--- a/analysocial/templates/account/login.html
+++ b/analysocial/templates/account/login.html
@@ -1,4 +1,5 @@
 {% extends "account/base.html" %}
+{# This template has to stay here, to ensure it overrides the default allauth template #}
 
 {% load i18n %}
 {% load account socialaccount %}
