--- a/graph/templates/graph/post_list.html
+++ b/graph/templates/graph/post_list.html
@@ -5,7 +5,20 @@
 {% block title %}{% trans "Facebook Posts" %}{% endblock %}
 
 {% block content %}
-    {% for object in object_list %}
-        <div>{{ object }}</div>
-    {% endfor %}
+    <div class="container">
+        <div class="row">
+            <div class="col-md-2"><h5>Created Date</h5></div>
+            <div class="col-md-3"><h5>ID</h5></div>
+            <div class="col-md-7"><h5>Message</h5></div>
+        </div>
+        {% for object in object_list %}
+            <div class="row">
+                <div class="col-md-2">{{ object.created_time }}</div>
+                <div class="col-md-3">{{ object.id }}</div>
+                <div class="col-md-7">{{ object.message|truncatechars:100 }}</div>
+            </div>
+        {% endfor %}
+    </div>
+
+    {% include 'snippets/pagination.html' %}
 {% endblock %}
