--- a/analysocial/templates/email/base.html
+++ b/analysocial/templates/email/base.html
@@ -1,7 +1,7 @@
 <div style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 14px;">
 
   <div style="padding: 11px; padding-bottom: 14px; color: #355E3B;">
-    <img style="display: block; float:left; margin-top: 5px; margin-right: 10px;"
+    <img style="display: block; float:left; margin-left: 3px; margin-top: -3px; margin-right: 4px; height: 44px;"
          src="{{ full_domain }}/static/img/analysocial.png" alt="logo">
         <span style="display: inline-block;">
         <span style="font-size: 26px;">analysocial</span><br>
@@ -26,7 +26,7 @@
   <div style="width: 100%; padding: 8px; text-align: center;">
 
   <span
-    style="width: auto; display: inline-block; padding: 6px 12px; background-color: #700a0a; border-radius: 3px; cursor: pointer;">
+    style="width: auto; display: inline-block; padding: 6px 12px; background-color: #355E3B; border-radius: 3px; cursor: pointer;">
     <a style="text-decoration: none; color: #ffffff;" target="_blank"
        href="{{ full_domain }}{% url 'posts_facebook' %}">
       Check your posts
