--- a/analysocial/templates/email/base.html
+++ b/analysocial/templates/email/base.html
@@ -1,7 +1,7 @@
 <div style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 14px;">
 
-  <div style="padding: 11px; padding-bottom: 14px; color: #355E3B;">
-    <img style="display: block; float:left; margin-left: 3px; margin-top: 0px; margin-right: 4px; max-height: 44px;"
+  <div style="padding-top: 11px; padding-bottom: 14px; color: #355E3B; border-bottom: 1px lightgrey;">
+    <img style="display: block; float:left; margin-right: 4px; max-height: 44px;"
          src="{{ full_domain }}/static/img/analysocial.png" alt="logo">
         <span style="display: inline-block;">
         <span style="font-size: 26px;">analysocial</span><br>
