Another styling tweak

--- a/analysocial/templates/email/base.html
+++ b/analysocial/templates/email/base.html
@@ -4,7 +4,7 @@
     <img style="display: block; float:left; margin-right: 4px; max-height: 44px;"
          src="{{ full_domain }}/static/img/analysocial.png" alt="logo">
         <span style="display: inline-block;">
-        <span style="font-size: 30px;">analysocial</span><br>
+        <span style="font-size: 30px; padding-top: 2px;">analysocial</span><br>
         </span>
   </div>
 
