Updated templates for new variables and options.

--- a/graph/templates/graph/email/posts_notify.html
+++ b/graph/templates/graph/email/posts_notify.html
@@ -1,5 +1,7 @@
 {% extends "email/base.html" %}
 
 {% block content %}
-You made {{ num_posts }} Facebook posts yesterday, {{ yesterday }}.
+<p>You made {{ num_posts }} Facebook posts during {{ posts_date }}.</p>
+
+<p>Your list of posts is attached.</p>
 {% endblock %}
