Added comments to UI

--- a/analysocial/templates/base.html
+++ b/analysocial/templates/base.html
@@ -24,7 +24,7 @@
                 Login
             </a></li>
         {% else %}
-            <li><a href="{% url 'posts_facebook' %}">
+            <li><a href="{% url 'facebook_posts' %}">
                 Posts
             </a></li>
             <li><a href="{% url 'account_profile' %}">
