--- a/analysocial/templates/email/base.html
+++ b/analysocial/templates/email/base.html
@@ -28,7 +28,7 @@
   <span
     style="width: auto; display: inline-block; padding: 6px 12px; background-color: #355E3B; border-radius: 3px; cursor: pointer;">
     <a style="text-decoration: none; color: #ffffff;" target="_blank"
-       href="{{ full_domain }}{% url 'posts_facebook' %}">
+       href="{{ full_domain }}{% url 'facebook_posts' %}">
       Check your posts
     </a>
   </span>
