--- a/graph/templates/graph/comment_detail.html
+++ b/graph/templates/graph/comment_detail.html
@@ -2,11 +2,15 @@
 
 {% load i18n static %}
 
-{% block title %}{% trans "Facebook Comment" %} {{ object.id }}{% endblock %}
+{% block title %}{% trans "Facebook Detail" %} {{ object.id }}{% endblock %}
 
 {% block content %}
     <h4>Comment Details</h4>
     <div class="container">
+        <div class="row">
+            <div class="col-md-2"><h5>Post</h5></div>
+            <div class="col-md-10">{{ object.post.id }}</div>
+        </div>
         <div class="row">
             <div class="col-md-2"><h5>Created Date</h5></div>
             <div class="col-md-10">{{ object.created_time }}</div>
