--- a/graph/templates/graph/post_detail.html
+++ b/graph/templates/graph/post_detail.html
@@ -25,6 +25,30 @@
         </div>
     </div>
 
+    <h4>Attachments</h4>
+    <div class="container">
+        {% if object.attachment_set.count %}
+            <div class="row">
+                <div class="col-md-2"><h5>Title</h5></div>
+                <div class="col-md-3"><h5>Type</h5></div>
+                <div class="col-md-7"><h5>Url</h5></div>
+            </div>
+            {% for object in object.attachment_set.all %}
+                <div class="row">
+                    <div class="col-md-3">{{ object.title }}</div>
+                    <div class="col-md-2">
+                        <a href="{% url 'facebook_attachment' object.id %}">{{ object.type }}</a>
+                    </div>
+                    <div class="col-md-7">{{ object.url|truncatechars:100 }}</div>
+                </div>
+            {% endfor %}
+        {% else %}
+            <div class="row">
+                <div class="col-md-2"><h5>No attachments</h5></div>
+            </div>
+        {% endif %}
+    </div>
+
     <h4>Comments</h4>
     <div class="container">
         {% if object.comment_set.count %}
