--- a/graph/templates/graph/post_list.html
+++ b/graph/templates/graph/post_list.html
@@ -10,8 +10,9 @@
         <div class="row">
             <div class="col-md-2"><h5>Created Date</h5></div>
             <div class="col-md-3"><h5>ID</h5></div>
-            <div class="col-md-3"><h5>Comments</h5></div>
-            <div class="col-md-7"><h5>Message</h5></div>
+            <div class="col-md-1"><h5>Attachments</h5></div>
+            <div class="col-md-1"><h5>Comments</h5></div>
+            <div class="col-md-5"><h5>Message</h5></div>
         </div>
         {% for object in object_list %}
             <div class="row">
@@ -19,8 +20,9 @@
                 <div class="col-md-3">
                     <a href="{% url 'facebook_post' object.id %}">{{ object.id }}</a>
                 </div>
+                <div class="col-md-1">{{ object.attachment_set.count }}</div>
                 <div class="col-md-1">{{ object.comment_set.count }}</div>
-                <div class="col-md-6">{{ object.message|truncatechars:100 }}</div>
+                <div class="col-md-5">{{ object.message|truncatechars:100 }}</div>
             </div>
         {% endfor %}
     </div>
