--- a/graph/templates/graph/comment_detail.html
+++ b/graph/templates/graph/comment_detail.html
@@ -12,6 +12,10 @@
             <div class="col-md-10">{{ object.post.id }}</div>
         </div>
         <div class="row">
+            <div class="col-md-2"><h5>Comment</h5></div>
+            <div class="col-md-10">{{ object.comment.id }}</div>
+        </div>
+        <div class="row">
             <div class="col-md-2"><h5>Created Date</h5></div>
             <div class="col-md-10">{{ object.created_time }}</div>
         </div>
@@ -29,5 +33,6 @@
         </div>
     </div>
 
-    {% include 'snippets/pagination.html' %}
+    {% include 'graph/snippets/comment_listing.html' %}
+
 {% endblock %}
