Added rudimentary usage statistics.

--- a/analysocial/templates/base.html
+++ b/analysocial/templates/base.html
@@ -27,6 +27,9 @@
             <li><a href="{% url 'facebook_posts' %}">
                 Posts
             </a></li>
+            <li><a href="{% url 'usage' %}">
+                Usage
+            </a></li>
             <li><a href="{% url 'account_profile' %}">
                 Profile
             </a></li>
