Added sync button to post listing.

--- a/analysocial/templates/snippets/pagination.html
+++ b/analysocial/templates/snippets/pagination.html
@@ -1,5 +1,5 @@
 {% if is_paginated %}
-    <nav>
+    <nav class="center">
         <ul class="pagination">
             {% if page_obj.has_previous %}
                 <li>
