--- a/graph/templates/graph/post_detail.html
+++ b/graph/templates/graph/post_detail.html
@@ -40,7 +40,7 @@
             {% endfor %}
         {% else %}
             <div class="row">
-                <div class="col-md-2"><h5>No attachments</h5></div>
+                <div class="col-md-12"><h5>No attachments found.</h5></div>
             </div>
         {% endif %}
     </div>
