--- a/graph/templates/graph/attachment_detail.html
+++ b/graph/templates/graph/attachment_detail.html
@@ -9,31 +9,31 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-md-2"><h5>Post</h5></div>
+            <div class="col-md-2"><span class="title">Post</span></div>
             <div class="col-md-10">{{ object.post.id }}</div>
         </div>
         <div class="row">
-            <div class="col-md-2"><h5>Title</h5></div>
+            <div class="col-md-2"><span class="title">Title</span></div>
             <div class="col-md-10">{{ object.title }}</div>
         </div>
         <div class="row">
-            <div class="col-md-2"><h5>URL</h5></div>
+            <div class="col-md-2"><span class="title">URL</span></div>
             <div class="col-md-10">{{ object.url }}</div>
         </div>
         <div class="row">
-            <div class="col-md-2"><h5>Type</h5></div>
+            <div class="col-md-2"><span class="title">Type</span></div>
             <div class="col-md-10">{{ object.type }}</div>
         </div>
         <div class="row">
-            <div class="col-md-2"><h5>Description</h5></div>
+            <div class="col-md-2"><span class="title">Description</span></div>
             <div class="col-md-10">{{ object.description }}</div>
         </div>
         <div class="row">
-            <div class="col-md-2"><h5>Media</h5></div>
+            <div class="col-md-2"><span class="title">Media</span></div>
             <div class="col-md-10">{{ object.media }}</div>
         </div>
         <div class="row">
-            <div class="col-md-2"><h5>Target</h5></div>
+            <div class="col-md-2"><span class="title">Target</span></div>
             <div class="col-md-10">{{ object.target }}</div>
         </div>
     </div>
