--- a/graph/templates/graph/comment_detail.html
+++ b/graph/templates/graph/comment_detail.html
@@ -8,7 +8,7 @@
     <h4>Comment Details</h4>
     <div class="container">
         <div class="row">
-            <div class="col-md-2"><h5>Post</h5></div>
+            <div class="col-md-2"><span class="title">Post</span></div>
             <div class="col-md-10">
                 <a target="_blank"
                    href="{{ FACEBOOK_URL }}/{{ object.post.id }}">{{ object.post.id }}</a>
@@ -16,7 +16,7 @@
         </div>
         {% if object.comment %}
             <div class="row">
-                <div class="col-md-2"><h5>Comment</h5></div>
+                <div class="col-md-2"><span class="title">Comment</span></div>
                 <div class="col-md-10">
                     <a target="_blank"
                        href="{{ FACEBOOK_URL }}/{{ object.comment.id }}">{{ object.comment.id }}</a>
@@ -24,21 +24,21 @@
             </div>
         {% endif %}
         <div class="row">
-            <div class="col-md-2"><h5>ID</h5></div>
+            <div class="col-md-2"><span class="title">ID</span></div>
             <div class="col-md-10">
                 <a target="_blank" href="{{ FACEBOOK_URL }}/{{ object.id }}">{{ object.id }}</a>
             </div>
         </div>
         <div class="row">
-            <div class="col-md-2"><h5>Created Date</h5></div>
+            <div class="col-md-2"><span class="title">Created Date</span></div>
             <div class="col-md-10">{{ object.created_time }}</div>
         </div>
         <div class="row">
-            <div class="col-md-2"><h5>Message</h5></div>
+            <div class="col-md-2"><span class="title">Message</span></div>
             <div class="col-md-10">{{ object.message }}</div>
         </div>
         <div class="row">
-            <div class="col-md-2"><h5>From</h5></div>
+            <div class="col-md-2"><span class="title">From</span></div>
             <div class="col-md-10">{{ object.from_json }}</div>
         </div>
     </div>
