--- a/graph/templates/graph/post_detail.html
+++ b/graph/templates/graph/post_detail.html
@@ -8,17 +8,17 @@
     <h4>Post Details</h4>
     <div class="container">
         <div class="row">
-            <div class="col-md-2"><h5>Created Date</h5></div>
+            <div class="col-md-2"><span class="title">Created Date</span></div>
             <div class="col-md-10">{{ object.created_time }}</div>
         </div>
         <div class="row">
-            <div class="col-md-2"><h5>ID</h5></div>
+            <div class="col-md-2"><span class="title">ID</span></div>
             <div class="col-md-10">
                 <a target="_blank" href="{{ FACEBOOK_URL }}/{{ object.id }}">{{ object.id }}</a>
             </div>
         </div>
         <div class="row">
-            <div class="col-md-2"><h5>Message</h5></div>
+            <div class="col-md-2"><span class="title">Message</span></div>
             <div class="col-md-10">
                 {% if object.message|slice:":4" == 'http' %}
                     <a target="_blank" href="{{ object.message }}">{{ object.message }}</a>
@@ -33,15 +33,15 @@
     <div class="container">
         {% if object.has_attachment %}
             <div class="row">
-                <div class="col-md-2"><h5>Title</h5></div>
+                <div class="col-md-2"><span class="title">Title</span></div>
                 <div class="col-md-10">{{ object.attachment.title }}</div>
             </div>
             <div class="row">
-                <div class="col-md-2"><h5>Type</h5></div>
+                <div class="col-md-2"><span class="title">Type</span></div>
                 <div class="col-md-10">{{ object.attachment.type }}</div>
             </div>
             <div class="row">
-                <div class="col-md-2"><h5>Url</h5></div>
+                <div class="col-md-2"><span class="title">Url</span></div>
                 <div class="col-md-10">
                     <a target="_blank"
                        href="{{ object.attachment.url }}">{{ object.attachment.url }}</a>
@@ -49,7 +49,7 @@
             </div>
         {% else %}
             <div class="row">
-                <div class="col-md-12"><h5>No attachment found.</h5></div>
+                <div class="col-md-12"><span class="title">No attachment found.</span></div>
             </div>
         {% endif %}
     </div>
