--- a/graph/templates/graph/post_list.html
+++ b/graph/templates/graph/post_list.html
@@ -24,11 +24,15 @@
 
         <div class="row">
             <form method="GET">
-                <div class="col-xs-10 col-md-11">
+                <div class="col-xs-9 col-sm-9 col-md-10">
                     {{ search_form|bootstrap_inline }}
                 </div>
-                <div class="col-xs-2 col-md-1">
-                    <input type="submit" value="Search" class="btn btn-primary pull-right"/>
+                <div class="col-xs-3 col-sm-3 col-md-2">
+                    <span class="pull-right">
+                        <a href="{% url 'facebook_posts' %}" class="btn btn-primary">Clear</a>
+                        &nbsp;&nbsp;
+                        <input type="submit" value="Search" class="btn btn-primary"/>
+                    </span>
                 </div>
             </form>
         </div>
